nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    io.kompose.service: nextcloud
  ports:
    - name: main
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    io.kompose.service: redis
  ports:
    - name: '6379'
      port: 6379
      targetPort: 6379
