nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.test.gewis.nl`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
